--- a/src/docker/dockerfile
+++ b/src/docker/dockerfile
@@ -1,8 +1,9 @@
-FROM python:3.11-slim
+FROM debian:stable-slim
 
-RUN apt-get update && apt-get install -y iproute2 iputils-ping net-tools tcpdump
+RUN apt-get update && apt-get install -y \
+    iproute2 iputils-ping net-tools tcpdump bridge-utils iptables
 
-RUN pip install scapy
+COPY startup.sh /startup.sh
+RUN chmod +x /startup.sh
 
-COPY classifier.py /classifier.py
-CMD ["python", "/classifier.py"]
+CMD ["/startup.sh"]
